# dateday

./: dateday.cabal
Data/Time/: DayOfWeek.hs
